# Social_Media_Website_Demo

./: .gitignore  README.md  cert.crt  cert.key  pyproject.toml  requirements.txt
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_db5b2f_idx.py
account/static/css/: base.css
account/templates/: base.html
account/templates/account/: dashboard.html  login.html
account/templates/account/user/: detail.html  list.html
account/templates/registration/: login.html  password_reset_confirm.html
actions/: admin.py  utils.py
actions/migrations/: 0001_initial.py
bookmarks/: settings.py  urls.py
images/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/static/css/: bookmarklet.css
images/static/js/: bookmarklet.js
images/templates/images/image/: create.html  detail.html  list.html  list_images.html  ranking.html
