[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = "Demo Social Media Website Project"
authors = ["David J Nevin <content@davidjnevin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~=4.1.0"
Pillow = "^9.2.0"
python-decouple = "^3.6"
MarkupSafe = "^2.1.1"
requests = "2.28.1"
dj-database-url = "^1.0.0"
social-auth-app-django = "^5.0.0"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.2"
pyOpenSSL = "^22.1.0"
easy-thumbnails = "^2.8.3"
django-debug-toolbar = "3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
